--- a/index.html
+++ b/index.html
@@ -1,61 +1,18 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Channel 19 - Signal Loss</title>
-    <style>
-        body {
-            background-color: black;
-            color: #ff5500;
-            font-family: monospace;
-            font-size: clamp(16px, 2vw, 22px);
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            flex-direction: column;
-        }
-        .crt-box {
-            border: 2px solid #ff5500;
-            padding: 40px;
-            max-width: 800px;
-            text-align: center;
-            box-shadow: 0 0 20px #ff5500;
-        }
-        .button {
-            background-color: black;
-            border: 1px solid #ff5500;
-            color: #ff5500;
-            padding: 10px 20px;
-            font-size: clamp(14px, 1.8vw, 20px);
-            cursor: pointer;
-            margin-top: 30px;
-        }
-        .button:hover {
-            background-color: #331a00;
-        }
-        .logo {
-            width: 120px;
-            margin-bottom: 20px;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Saturday Mournings: Lost Signal</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-    <img src="logo.png" alt="Saturday Mournings Logo" class="logo">
-    <div class="crt-box">
-        <p>Initializing Channel 19...</p>
-        <p>You wake up, but nothing around you feels like waking.</p>
-        <p>The clock blinks 3:19AM, even though you don’t remember owning one. The walls hum with quiet static.</p>
-        <p>The television is on. You don’t own a TV. You never have.</p>
-        <p>There’s something glinting beside a half-crushed cereal box on the floor.</p>
-        <p>Somewhere, a phone rings once. Then silence.</p>
-        <p>[You feel like you’ve walked into a memory that never aired.]</p>
-        <form action="transmission.html">
-            <button class="button">RECEIVE THE TRANSMISSION</button>
-        </form>
-    </div>
+  <div id="game-container">
+    <h1>📺 Channel 19 Signal Loss</h1>
+    <div id="game-output" class="game-text"></div>
+    <div id="option-buttons"></div>
+  </div>
+
+  <script src="js/game.js"></script>
 </body>
 </html>
