--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Saturday Mournings: Lost Signal</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Channel 19 Signal Loss</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div id="game-container">
     <h1>📺 Channel 19 Signal Loss</h1>
-    <div id="game-output" class="game-text"></div>
-    <div id="option-buttons"></div>
+    <pre id="game-output">Initializing Channel 19...</pre>
+    <div id="options-container"></div>
   </div>
 
-  <script src="js/game.js"></script>
+  <script src="game.js"></script>
 </body>
 </html>
