--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div id="game-container">
-    <h1>📺 Channel 19 Signal Loss</h1>
+  <div class="crt-frame">
+    <h1>📺 <span class="orange">Channel 19 Signal Loss</span></h1>
     <pre id="game-output">Initializing Channel 19...</pre>
     <div id="options-container"></div>
   </div>
