Update index.html v4

--- a/index.html
+++ b/index.html
@@ -3,23 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>📺 Channel 19 Signal Loss</title>
+  <title>Channel 19 Signal Loss</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="crt-frame">
-    <h1>📺 <span class="title">Channel 19 Signal Loss v.3</span></h1>
-    <pre id="game-output" class="output">Initializing Channel 19...</pre>
-    <div id="option-buttons" class="button-container"></div>
-    <input
-      id="command-input"
-      type="text"
-      placeholder="type a command..."
-      autocomplete="off"
-      class="hidden"
-    />
+  <div id="game-container">
+    <h1>📺 Channel 19 Signal Loss</h1>
+    <pre id="game-output"></pre>
+    <div id="button-container"></div>
   </div>
-
   <script src="game.js"></script>
 </body>
 </html>
